# lacrei-saude-api

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  http.http  manage.py  pyproject.toml  pytest.ini
.ebextensions/: django.config
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
consultations/: admin.py  models.py  serializers.py  tests.py  views.py
consultations/migrations/: 0001_initial.py
core/: settings.py  tests_auth.py  urls.py
professionals/: admin.py  models.py  serializers.py  tests.py  views.py
professionals/migrations/: 0001_initial.py
